# SXAU-vscode-c

./: README-CMake.md  README-vscode.md  README.md
cmake-learn/: CMakeLists.txt  compile.sh  run.sh
cmake-learn/src/: main.c
